# tuma250_mcp

./: .gitignore  LICENSE  README.md  __init__.py  client_core.py  config-example.env  config.py  parsing.py  pyproject.toml  server.py
.github/workflows/: publish-mcp.yml
config/: mcporter.conf
skills/tuma250/: SKILL.md
tests/: test_tuma250_client_core.py  test_tuma250_parsing.py
tuma250_mcp/: README.md  __init__.py  client_core.py  pyproject.toml  server.py
